# SugarSpice

./: .gitignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  README.md  environment.yml
.github/workflows/: ctests.yml  deploy.yml
SpiceQL/db/: apollo16.json  apollo17.json  base.json  cassini.json  clem1.json  galileo.json  jno.json  juno.json  lro.json  mess.json  mro.json  spiceMissionSchmea.schema.json  viking1.json  viking2.json
SpiceQL/include/: config.h  io.h  query.h  spice_types.h  utils.h
SpiceQL/src/: config.cpp  io.cpp  query.cpp  spice_types.cpp  utils.cpp
SpiceQL/tests/: CMakeLists.txt  Fixtures.cpp  Fixtures.h  FunctionalTestsConfig.cpp  FunctionalTestsSpiceQueries.cpp  IoTests.cpp  KernelTests.cpp  Paths.h  QueryTests.cpp  TestMain.cpp  UtilTests.cpp
SpiceQL/tests/data/: isisKernelList.txt  lro_clkcor_2020184_v00.tsc
SugarSpice/db/: base.json  cassini.json  clem1.json  galileo.json  lro.json  mess.json  test.json
SugarSpice/include/: io.h  kernel.h  query.h  spice_types.h  sugar_spice.h  utils.h
SugarSpice/src/: io.cpp  kernel.cpp  query.cpp  spice_types.cpp  utils.cpp
SugarSpice/tests/: CMakeLists.txt  CMakelists.txt  Fixtures.cpp  Fixtures.h  FunctionalTestsSpiceQueries.cpp  IoTests.cpp  KernelTests.cpp  Paths.h  QueryTests.cpp  SpkTests.cpp  UtilTests.cpp
SugarSpice/tests/data/: msgr_mdis_v010.ti
SugarSpice/tests/data/dir_structs/: isisdata.txt  messData.txt
bindings/python/: CMakeLists.txt  __init__.py  config.i  io.i  pyspiceql.i  query.i  setup.py.in  spice_types.i  utils.i
bindings/python/tests/: test_pyspiceql.py  test_utils.py
cmake/: config.cmake.in  gtest.cmake
docs/: CMakeLists.txt  CmakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/reference/: api.rst  tutorials.rst
recipe/: bld.bat  build.sh  meta.yaml
scripts/: createKernelList.py
scripts/flaskRestAPI/: app.py
scripts/schemaValidation/: validation.py  validationDependencies.yml
scripts/spiceJsonGenerator/: jsonGeneratorDependencies.yml  spiceGeneratorDependencies.yml  spiceJsonGenerator.py
src/: SugarSpice.cpp
